objects/SLP_Expert__c.object
<CustomObject>
    <fields>
        <fullName>ES_User_ID__c</fullName>
        <label>ES User ID</label>
        <referenceTo>ES_User__c</referenceTo>
        <relationshipLabel>SLP_Experts</relationshipLabel>
        <relationshipName>SLP_Experts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Expert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Expert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLP_Secondary_Industry_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SLP Secondary Industry ID</label>
        <referenceTo>SLP_Secondary_Industry__c</referenceTo>
        <relationshipLabel>SLP_Experts</relationshipLabel>
        <relationshipName>SLP_Experts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SLP_Expert</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SLPE-{00000000}</displayFormat>
        <label>SLP_Expert ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLP_Experts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>